--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,8 @@
     height: 100%;
     overflow: hidden;
     background-color: #EBEBEB;
+    /* scrollbar-width: none;
+    -ms-overflow-style: none;  */
   }
   
   a {
@@ -31,7 +33,11 @@
   * {
     box-sizing: border-box;
   }
-  
+  /* *::-webkit-scrollbar{
+    width: 0;
+    height: 0;
+  }
+   */
 
   @keyframes fly {
     100% {
